[package]
name = "xmc4200"
description = "Peripheral access library for XCM4200 ARM Cortex-M"
version = "0.5.0"
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/xmc-rs/xmc4200"
keywords = ["cortex-m", "xmc4x", "no_std", "svd2rust", "embedded"]
documentation = "https://docs.rs/xmc4200/"
categories = ["embedded", "no-std"]
edition = "2018"

[dependencies]
cortex-m = "0.7.5"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.1"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ['rt']
