[package]
name = "xmc4200"
description = "Peripheral access library for XCM4200 ARM Cortex-M"
version = "0.8.1"
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/xmc-rs/xmc4200"
keywords = ["cortex-m", "xmc4x", "no_std", "svd2rust", "embedded"]
documentation = "https://docs.rs/xmc4200/"
categories = ["embedded", "no-std"]
edition = "2018"

[dependencies]
cortex-m = "0.7.7"
critical-section = { version = "1.1.2", optional = true }
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.3"

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ['default']
